--- a/css/main.css
+++ b/css/main.css
@@ -1041,11 +1041,11 @@ img {
 }
 
 .jeux-showcase .section-title {
-  font-size: 2.5rem;
+  font-size: 3rem;
   color: #eda234; /* Couleur dorée */
-  margin-bottom: 0;
+  margin-bottom: 3rem;
   font-weight: 600;
-  line-height: 1.3;
+  line-height: 1.2;
 }
 
 /* Slider horizontal simple */
