--- a/css/responsive.css
+++ b/css/responsive.css
@@ -353,9 +353,11 @@ img {
     }
     
     .section-title {
-        font-size: 1.6rem !important;
+        font-size: 2.2rem !important;
         text-align: center !important;
-        margin: 0 auto 20px !important;
+        margin: 0 auto 25px !important;
+        padding: 0 15px !important;
+        line-height: 1.2 !important;
     }
     
     .showcase-window {
